--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@200;300;400;500;600;700;800&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  font-family: 'Epilogue', sans-serif;
+  color: #444955;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.head-content {
+  display: flex;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.container label, textarea {
+  display: flex;
+  flex-direction: column;
+}
+
+form {
+  width: 50%;
+  padding: 12px;
+}
+
+form h1 {
+  font-family: 'Epilogue';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 29px;
+}
+
+label {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+textarea {
+  resize: none;
+  width: max-content;
+}
+
+.Card {
+  width: 50%;
+  background: #023031;
 }
