--- a/src/index.css
+++ b/src/index.css
@@ -49,9 +49,103 @@ label {
   line-height: 150%;
 }
 
-.Card {
+.preview-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 50%;
   background: #023031;
+}
+
+.Card {
+  background: #036B52;
+  border-radius: 10px;
+  border: 10px solid #fff;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
+  padding: 10px;
+  width: 300px
+}
+
+.Card:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.Card-title {
+  border-radius: 10px;
+  background: #023031;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.Card-title-text {
+  width: auto;
+  height: 40px;
+  border-radius: 10px 10px 0 0;
+  background: #023031;
+}
+
+#image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  width: 100%;
+  background: white;
+  padding: 20px;
+  opacity: 0.9;
+}
+
+#image-card {
+  width: auto;
+  max-width: auto;
+  max-height: 200px
+}
+
+.Card-title h3 {
+  color: white;
+  text-align: end;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  padding: 10px;
+}
+
+#description {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  background-color:#023031;
+  align-items: center;
+  padding: 16px;
+  border-radius: 0 0 8px 8px;
+  margin-bottom: 8px;
+}
+
+.Card-atributes {
+  background-color: white;
+  padding: 12px;
+  border-radius: 2px;
+}
+
+.atribute {
+  margin: 8px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.atribute span {
+  color: ##3D495C;
+}
+
+.Card p {
+  font-style: italic;
+  text-align: justify;
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 13px;
+  color: white;
 }
 
 input, textarea, select {
