--- a/src/index.css
+++ b/src/index.css
@@ -119,10 +119,10 @@ label {
 #description {
   display: flex;
   width: 100%;
-  height: 40px;
+  min-height: 45px;
   background-color:#023031;
   align-items: center;
-  padding: 16px;
+  padding: 18px;
   border-radius: 0 0 8px 8px;
   margin-bottom: 8px;
 }
@@ -291,10 +291,14 @@ textarea {
 }
 
 #rare-card-span {
-  text-align: center;
+  align-self: center;
   color: #023031;
   font-weight: 700;
   font-size: 20px;
+  padding: 4px 12px 0 12px;
+  background-color: white;
+  border-radius: 8px;
+  max-width: 60%;
 }
 
 #trunfo-card-img {
@@ -315,4 +319,10 @@ legend {
   font-size: 12px;
   margin-top: 2px;
   text-align: center;
+}
+
+#has_trunfo {
+  height: 73px;
+  display: flex;
+  align-items: center;
 }
